nova_tests/strings/neg/plan131_alloc_uncollectable_pos.nv
// Plan 131 Ф.1 — RawMem.alloc_uncollectable + free_uncollectable round-trip.
// Allocate non-GC memory, write a value, read back, free.
// EXPECT_OUTPUT: ok

module neg.plan131_alloc_uncollectable_pos

import std.runtime.raw_mem.{RawMem}

fn main() -> () {
    unsafe {
        // Allocate 16 bytes outside GC tracking.
        mut p = RawMem.alloc_uncollectable(16)
        // Verify zero-init: first byte should be 0.
        ro first = *p
        assert(first as int == 0)
        // Write and read back.
        *p = 7 as u8
        ro v = *p
        assert(v as int == 7)
        // Free to avoid leak (required for uncollectable allocations).
        RawMem.free_uncollectable(p)
    }
    println("ok")
}
